--- a/TestGitCommands/TestGitCommands/CherryPickViewController.xib
+++ b/TestGitCommands/TestGitCommands/CherryPickViewController.xib
@@ -27,6 +27,9 @@
                     </constraints>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    <connections>
+                        <action selector="trouchUpInside:" destination="-1" eventType="touchUpInside" id="O2k-0Y-6Cw"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
